# musico-pratico

./: .gitignore  README.md  package-lock.json  package.json  pageXML_to_TEI.py  pyproject.toml
data/edition/: Dialogo_1595.html  Ragionamento_1588.html  dialogo_mei_test.html  dialogo_mei_test_toolkit.html  edition.css  edition.html
src/: musico-pratico.xsl  musico-pratico_mei.xsl
src/page2tei/: pageXML_to_TEI.py
src/xslt/: edition.xsl  edition_initial.xsl
