[project]
name = "musico-pratico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.2",
]

[project.scripts]
page2tei = "page2tei.pageXML_to_TEI:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/page2tei"]
